--- a/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
@@ -41,13 +41,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Advertencia\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "input(\"Introduce una velocidad:\")\n",
+        "velocidad_asteroide=49\n",
+        "if velocidad_asteroide>25:\n",
+        "    print(\"Advertencia\")"
       ]
     },
     {
@@ -231,7 +243,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.7.11"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
